Run devcontainer as non-root user
Running as root within the container makes for an extremely nasty user
experience on linux, since all files written within mounted directories
(the workspace) will end up being owned by root on the host.

Also:
- Allow use of sudo within the dev container, so users can install
  software without modifying the Dockerfile
- Stop forwarding old unused ports

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,29 +1,20 @@
-# Update the VARIANT arg in docker-compose.yml to pick a Node version: 10, 12, 14
-ARG VARIANT=12
+FROM quay.io/estuary/flow:v0.1.0-234-gf1d072b-dirty
 
-FROM quay.io/estuary/flow:v0.1.0-229-g9e43385-dirty
-FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:${VARIANT}
-
-RUN apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
-    && apt-get update -y \
+# Switch to the root user to install packages and setup sudo access
+USER root
+RUN apt-get update -y \
     && apt-get install --no-install-recommends -y \
-      ca-certificates \
-      curl \
-      liblz4-1 \
-      libreadline7 \
-      libsnappy1v5 \
-      libzstd1 \
       postgresql-client \
       pv \
+      sudo \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy in Estuary Flow release binaries.
-COPY --from=0 /usr/local/bin/* /usr/local/bin/
-COPY --from=0 /usr/local/lib/librocksdb.* /usr/local/lib/
-RUN ldconfig
+# Allow users to use sudo inside the dev container. This allows people to install their own
+# software in the container without modifying this Dockerfile.
+RUN echo flow ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/flow \
+    && chmod 0440 /etc/sudoers.d/flow
+
 # Generate Flow catalog JSON-Schema for integration with VSCode.
 RUN flowctl json-schema > /usr/local/etc/flow.schema.json
 
-RUN mkdir -p /var/lib/flow
-ENV FLOW_NODEJS_DIR=/var/lib/flow/nodejs
-
+USER flow
