Run GH Action as root
This seems to be required, as a non-root user within the container is
unable to modify any files inside the working directory.

--- a/.github/actions/flowctl/action.yaml
+++ b/.github/actions/flowctl/action.yaml
@@ -16,8 +16,9 @@ inputs:
 runs:
   using: 'docker'
   image: '../../../.devcontainer/Dockerfile'
-  entrypoint: flowctl
+  entrypoint: sudo
   args:
+    - flowctl
     - ${{ inputs.command }}
     - '--source'
     - ${{ inputs.source }}
