--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,3 +7,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: 'Test'
         uses: ./.github/actions/flowctl
+        with:
+          source: hello-world.flow.yaml
