--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/estuary/flow:v0.1.0-234-gf1d072b-dirty
+FROM quay.io/estuary/flow:dev
 
 # Switch to the root user to install packages and setup sudo access
 USER root
