--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: "Test"
+      - name: Test catalog
         uses: ./.github/actions/flowctl
         with:
+          source: hello-world.flow.yaml
+
+      - name: Poll catalog
+        uses: ./.github/actions/flowctl
+        with:
+          command: develop --poll
           source: hello-world.flow.yaml
