add sqlite extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,12 @@
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"sqltools.connections": [
 			{
+				"name": "acmeCo.db",
+				"driver": "SQLite",
+				"previewLimit": 50,
+				"database": "acmeCo.db"
+			},
+			{
 				"name": "Container database",
 				"driver": "PostgreSQL",
 				"previewLimit": 50,
@@ -41,6 +47,8 @@
 		"mtxr.sqltools",
 		// Driver for attached, docker compose database.
 		"mtxr.sqltools-driver-pg",
+		// Driver for local sqlite databases
+		"mtxr.sqltools-driver-sqlite",
 		// YAML language & schema support.
 		"redhat.vscode-yaml",
 		// Spell checker for documentation and catalogs.
