updates: new word-count example, use postgres, and update flow
Word count example uses postgres CDC and materialization to show off
continuous materializations within a single DB.

Expand the README with instructions to make this repo more interesting.

Also account for numerous updates to flow since this was last touched.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/estuary/flow:dev
+FROM ghcr.io/estuary/flow:dev
 
 # Switch to the root user to install packages and setup sudo access
 USER root
@@ -11,11 +11,6 @@ RUN apt-get update -y \
       jq \
       sudo \
       git
-
-RUN curl -L -o /usr/bin/websocat https://github.com/vi/websocat/releases/download/v1.6.0/websocat_amd64-linux \
-		&& echo "cec0d7d05252dcadb09a5afb8851cf9f3a8997bba44334eee5f7db70ca72aa0b /usr/bin/websocat" | sha256sum -c - \
-		&& chmod +x /usr/bin/websocat \
-		&& websocat --version
 
 # Allow users to use sudo inside the dev container. This allows people to install their own
 # software in the container without modifying this Dockerfile.
