fix: use new generated typescript + derivative module specification
resolves #6

--- a/word-counts.flow.yaml
+++ b/word-counts.flow.yaml
@@ -24,6 +24,8 @@ collections:
       reduce: { strategy: merge }
     key: [/word]
     derivation:
+      typescript:
+        module: word-counts.flow.ts
       transform:
         fromDocuments:
           source:
